GNOME Bugzilla – Bug 651229
Text area in edit details dialog gets not resized along with the window
Last modified: 2011-05-27 10:47:51 UTC
This used to work fine prior to frogr 0.5, so it's clearly a bug in this release that should be fixed, since it's very annoying when you want to write long descriptions (and that happens sometimes)
This problem has been fixed in the development version. The fix will be available in the next software release. http://git.gnome.org/browse/frogr/commit/?id=4b40bdf49f6edb88a29b46bfa8b43cbb78e8559d