Resize text area in when resizing the 'edit details' dialog (#651229)

https://bugzilla.gnome.org/show_bug.cgi?id=651229